--- a/products.html
+++ b/products.html
@@ -20,7 +20,54 @@
             background-color: #f9f9f9;
             color: #333;
         }
-
+        
+/* Footer Styling */
+footer {
+    background: #0E2841;
+    color: #fff;
+    padding: 40px 20px;
+    text-align: center;
+}
+.footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+.footer-section {
+    flex: 1;
+    min-width: 250px;
+}
+.footer-section h3 {
+    font-size: 20px;
+    margin-bottom: 15px;
+    color: #98DED9;
+}
+.footer-section p,
+.footer-section ul li {
+    font-size: 14px;
+    line-height: 1.8;
+}
+.footer-section ul {
+    list-style: none;
+    padding: 0;
+}
+.footer-section ul li a {
+    text-decoration: none;
+    color: #fff;
+    transition: color 0.3s ease;
+}
+.footer-section ul li a:hover {
+    color: #98DED9;
+}
+.footer-bottom {
+    font-size: 12px;
+    border-top: 1px solid #98DED9;
+    padding-top: 10px;
+    margin-top: 20px;
+}
+        
         /* Navigation Bar */
 nav {
     background: #f7f7f7;
